<resources>
    <string name="app_name">HealthKeeper</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="health_keeper">Health Keeper</string>
    <string name="start_button">START</string>
    <string name="imputname">Name</string>
    <string name="imputweigh">Your weight</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tooday_need">Tooday you also need to drink:</string>
    <string name="drink_water">Now i will drink:</string>
    <string name="last_time_take">Last time you drank:</string>
    <string name="now_i_drunk">Value of water in ml </string>
    <string name="save">Save</string>
    <string name="go_to_notification">"Notification settings"</string>
    <string name="go_to_standart">Edit data</string>
    <string name="buttonContinue">Count</string>
    <string name="countinue">NEXT</string>

</resources>
