<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tooday_need"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:text="@string/tooday_need"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/also_needed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tooday_need"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:text=" "
            android:textSize="30dp"
            android:textStyle="bold" />

        <View
            android:id="@+id/bottle"
            android:layout_width="213dp"
            android:layout_height="266dp"
            android:layout_below="@id/also_needed"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/progress_bottle"/>

        <LinearLayout
            android:id="@+id/layout_for_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bottle"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/last_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/bottle"
                android:text="@string/last_time_take"
                android:textSize="13dp" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:background="@drawable/oval_button"
            android:orientation="horizontal"
            android:id="@+id/buttonDrink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_for_time"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:onClick="now_drink"
            android:text="@string/drink_water" >
            <TextView
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="@string/drink_water"
                android:textColor="@color/colorWhite"
                android:textSize="20dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonDrink"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/much_drunk"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"
                android:hint="@string/now_i_drunk"
                android:inputType="numberSigned"
                android:visibility="invisible" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:onClick="save_drunk"
                android:text="@string/save"
                android:visibility="invisible" />
        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="14"
        android:layout_marginBottom="3dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/outline_notifications_active_black_24dp"
            android:onClick="notification"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/outline_settings_black_24dp"
            android:layout_weight="1"
            android:onClick="settings"/>

    </LinearLayout>
</LinearLayout>