<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/text_invitation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter you data"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/imputname"
        android:inputType="textPersonName"
        android:layout_below="@+id/text_invitation"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp"/>

    <EditText
        android:id="@+id/imputweigh"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/imputweigh"
        android:inputType="numberSigned"
        android:layout_below="@+id/editText3"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp"/>

    <Spinner
        android:id="@+id/switch_sex"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@id/text_invitation"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentRight="true" />
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/buttonCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imputweigh"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/buttonContinue"
        android:background="@drawable/oval_button"
        android:onClick="pressButtonCount">
        <TextView
            android:layout_marginLeft="20dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="COUNT"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/baseline_arrow_forward_black_18dp"
            android:layout_weight="1"
            android:layout_marginRight="10dp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/extract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" "
        android:layout_below="@id/buttonCount"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:textSize="20dp"/>
    <LinearLayout
        android:background="@drawable/oval_button"
        android:orientation="horizontal"
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CONTINUE"
        android:textSize="20dp"
        android:layout_below="@id/text_invitation"
        android:layout_alignParentRight="true"
        android:layout_marginTop="300dp"
        android:layout_marginRight="30dp"
        android:onClick="pressButtonSave"
        android:visibility="invisible">
        <TextView
            android:layout_marginLeft="20dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/countinue"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/baseline_arrow_forward_black_18dp"
            android:layout_weight="1"
            android:layout_marginRight="10dp"/>



    </LinearLayout>

</RelativeLayout>
